k8s/temporal-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: temporal-db
  name: temporal-db
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: temporal-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: temporal-db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: temporal
            - name: POSTGRES_USER
              value: temporal
            - name: PGDATA # 追加
              value: /var/lib/postgresql/data/db # 追加
          image: postgres:17.4
          name: temporal-db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: temporal-pgdata
      restartPolicy: Always
      volumes:
        - name: temporal-pgdata
          persistentVolumeClaim:
            claimName: temporal-pgdata
