k8s/temporal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: temporal
  name: temporal
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: temporal
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: temporal
    spec:
      containers:
        - env:
            - name: DB
              value: postgres12
            - name: DB_PORT
              value: "5432"
            - name: POSTGRES_PWD
              value: temporal
            - name: POSTGRES_SEEDS
              value: temporal-db
            - name: POSTGRES_USER
              value: temporal
          image: temporalio/auto-setup:1.27.2
          name: temporal
          ports:
            - containerPort: 7233
              protocol: TCP
      restartPolicy: Always
