k8s/temporal-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: temporal-ui
  name: temporal-ui
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: temporal-ui
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: temporal-ui
    spec:
      containers:
        - env:
            - name: TEMPORAL_ADDRESS
              value: temporal:7233
            - name: TEMPORAL_UI_PORT #追加
              value: "8080" #追加
            - name: TEMPORAL_UI_PUBLIC_PATH #追加
              value: /temporal #追加
          image: temporalio/ui:2.36.1
          name: temporal-ui
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
