k8s/graphql-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: graphql-service
  name: graphql-service
  namespace: microservices
spec:
  type: ClusterIP
  ports:
    - name: "graphql-service"
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: graphql-service
