k8s/grpc-order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: grpc-order-service
  name: grpc-order-service
  namespace: microservices
spec:
  ports:
    - name: "50053"
      port: 50053
      targetPort: 50053
  selector:
    io.kompose.service: grpc-order-service
