k8s/grpc-payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: grpc-payment-service
  name: grpc-payment-service
  namespace: microservices
spec:
  ports:
    - name: "50054"
      port: 50054
      targetPort: 50054
  selector:
    io.kompose.service: grpc-payment-service
