k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
  namespace: microservices
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15672"
      port: 80
      targetPort: 15672
  selector:
    io.kompose.service: rabbitmq
