k8s/temporal-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: temporal-ui
  name: temporal-ui
  namespace: microservices
spec:
  ports:
    - name: "8080"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: temporal-ui
