k8s/workflow-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: workflow-service
  name: workflow-service
  namespace: microservices
spec:
  ports:
    - name: "50060"
      port: 50060
      targetPort: 50060
  selector:
    io.kompose.service: workflow-service
